--- a/notebook/Open AI Reinforcment Sonic.ipynb
+++ b/notebook/Open AI Reinforcment Sonic.ipynb
@@ -33,17 +33,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[33mWARN: gym.spaces.Box autodetected dtype as <class 'numpy.float32'>. Please provide explicit dtype.\u001b[0m\n"
+      "\n",
+      "The following command must be run outside of the IPython shell:\n",
+      "\n",
+      "    $ pip install gym[atari]\n",
+      "\n",
+      "The Python package manager (pip) can only be used from outside of IPython.\n",
+      "Please reissue the `pip` command in a separate terminal or command prompt.\n",
+      "\n",
+      "See the Python documentation for more information on how to install packages:\n",
+      "\n",
+      "    https://docs.python.org/3/installing/\n"
      ]
     }
    ],
+   "source": [
+    "#Install\n",
+    "\n",
+    "%pip install gym[atari]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## OpenAi Gym og Retro"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this tutorial we will be using the OpenAi Gym library. OpenAi is a company that is doing research on reinforcement learning and provides us a easy to use library called Gym that can simulate reinforcment environments which we can interact with.\n",
+    "\n",
+    "Gym can be installed using the pip command:\n",
+    "\n",
+    "pip install gym"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Example code"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The code below shows example of using the Gym library and is the code you need to know about Gym for implementing reinforcement learning. The code simulates the CartPole environment and performs random action on each frame. This means that it won't learn anything."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Import the gym module\n",
     "import gym\n",
@@ -59,9 +112,57 @@
     "while not is_done:\n",
     "  # Perform a random action, returns the new frame, reward and whether the game is over\n",
     "  frame, reward, is_done, _ = env.step(env.action_space.sample())\n",
-    "  # Render\n",
+    "  # Render.\n",
     "  env.render()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Deep Reinforcment Learning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sonic The Hedgehog"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Implementing Deep Q Neural Network with Keras"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[33mWARN: gym.spaces.Box autodetected dtype as <class 'numpy.float32'>. Please provide explicit dtype.\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -96,7 +197,7 @@
     "exploration_rate = 1.0\n",
     "exploration_min = 0.01\n",
     "exploration_decay = 0.995\n",
-    "memory = deque(maxlen=10000)\n",
+    "memory = deque(maxlen=10000) #Efficient list with maximum length for memory conservation\n",
     "randBinList = lambda n: [random.randint(0, 1) for b in range(1, n + 1)]\n"
    ]
   },
@@ -109,27 +210,25 @@
    "outputs": [],
    "source": [
     "def create_model(): \n",
-    "    model = Sequential()\n",
-    "    model.add(Conv2D(32, 8, 8, subsample=(4, 4), input_shape=(state_size)))\n",
-    "    model.add(BatchNormalization())\n",
-    "    model.add(Activation('relu'))\n",
-    "    model.add(Conv2D(64, 4, 4, subsample=(2, 2)))\n",
-    "    model.add(BatchNormalization())\n",
-    "    model.add(Activation('relu'))\n",
-    "    model.add(Conv2D(64, 3, 3))\n",
-    "    model.add(BatchNormalization())\n",
-    "    model.add(Activation('relu'))\n",
-    "    model.add(Flatten())\n",
-    "    model.add(Dense(units=64))\n",
-    "    model.add(BatchNormalization())\n",
-    "    model.add(Activation('relu'))\n",
-    "    model.add(Dense(units=32))\n",
-    "    model.add(BatchNormalization())\n",
-    "    model.add(Activation('relu'))\n",
-    "    model.add(Dense(output_dim=action_size, activation='softmax'))\n",
+    "    self.model = Sequential()\n",
+    "    self.model.add(Conv2D(32, 4, 4, subsample=(4, 4),\n",
+    "                          input_shape=(int(self.state_size[0] / 2), int(self.state_size[1] / 2), 1)))\n",
+    "    self.model.add(BatchNormalization())\n",
+    "    self.model.add(Activation('relu'))\n",
+    "    self.model.add(Conv2D(64, 4, 4, subsample=(2, 2)))\n",
+    "    self.model.add(BatchNormalization())\n",
+    "    self.model.add(Activation('relu'))\n",
+    "    self.model.add(Conv2D(64, 3, 3))\n",
+    "    self.model.add(BatchNormalization())\n",
+    "    self.model.add(Activation('relu'))\n",
+    "    self.model.add(Flatten())\n",
+    "    self.model.add(Dense(units=512))\n",
+    "    self.model.add(BatchNormalization())\n",
+    "    self.model.add(Activation('relu'))\n",
+    "    self.model.add(Dense(output_dim=self.action_size))\n",
     "\n",
-    "    adam = Adam(lr=learning_rate)\n",
-    "    model.compile(loss='mae', optimizer=adam)"
+    "    adam = Adam(lr=self.learning_rate)\n",
+    "    self.model.compile(loss='mae', optimizer=adam)"
    ]
   },
   {
@@ -173,17 +272,21 @@
     "        if len(self.memory) < sample_batch_size:\n",
     "            return\n",
     "\n",
-    "        sample_batch = get_sample_batch(sample_batch_size)\n",
+    "        sample_batch = self.get_sample_batch(sample_batch_size)\n",
     "        for state, action, reward, next_state, done in sample_batch:\n",
-    "            if done:\n",
-    "                Q_values = np.array([reward])\n",
-    "            else:\n",
-    "                Q_values = reward + self.gamma * np.max(model.predict(next_state), axis=1)\n",
     "\n",
-    "            state = np.reshape(state, (1,) + self.state_size)\n",
-    "            model.train_on_batch(state, reward_value)(state, action*Q_values[:, None])\n",
-    "        if exploration_rate > exploration_min:\n",
-    "            exploration_rate *= exploration_decay"
+    "            if done:\n",
+    "                Q_values = np.zeros((self.action_size, ))\n",
+    "                Q_values[np.argmax(action)] = reward\n",
+    "            else:\n",
+    "                Q_values = np.zeros((self.action_size, ))\n",
+    "                prediction = self.predict(next_state)\n",
+    "                Q_values[np.argmax(action)] = reward + self.gamma * np.max(prediction, axis=1)\n",
+    "\n",
+    "            # state = np.reshape(state, (1,) + self.state_size)\n",
+    "            self.train(state, Q_values.reshape((1, self.action_size)))\n",
+    "        if self.exploration_rate > self.exploration_min:\n",
+    "            self.exploration_rate *= self.exploration_decay"
    ]
   },
   {
@@ -234,6 +337,22 @@
     "                agent.replay(self.sample_batch_size)\n",
     "                #self.env.reset()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Linker for å lære mer om Reinforcement learning og Q learning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[simple-reinforcement-learning-with-tensorflow](https://medium.com/emergent-future/simple-reinforcement-learning-with-tensorflow-part-0-q-learning-with-tables-and-neural-networks-d195264329d0)\n",
+    "\n",
+    "[lets-build-an-atari-ai](https://becominghuman.ai/lets-build-an-atari-ai-part-0-intro-to-rl-9b2c5336e0ec)"
+   ]
   }
  ],
  "metadata": {
@@ -252,7 +371,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
