Ryddet kode og implementert fungerende DQN kode

--- a/notebook/Open AI Reinforcment Sonic.ipynb
+++ b/notebook/Open AI Reinforcment Sonic.ipynb
@@ -33,31 +33,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "The following command must be run outside of the IPython shell:\n",
-      "\n",
-      "    $ pip install gym[atari]\n",
-      "\n",
-      "The Python package manager (pip) can only be used from outside of IPython.\n",
-      "Please reissue the `pip` command in a separate terminal or command prompt.\n",
-      "\n",
-      "See the Python documentation for more information on how to install packages:\n",
-      "\n",
-      "    https://docs.python.org/3/installing/\n"
+      "Requirement already satisfied: gym[atari] in c:\\users\\cenar\\miniconda3\\lib\\site-packages (0.9.7)\n",
+      "Requirement already satisfied: six in c:\\users\\cenar\\miniconda3\\lib\\site-packages (from gym[atari]) (1.11.0)\n",
+      "Requirement already satisfied: numpy>=1.10.4 in c:\\users\\cenar\\miniconda3\\lib\\site-packages (from gym[atari]) (1.14.2)\n",
+      "Requirement already satisfied: pyglet>=1.2.0 in c:\\users\\cenar\\miniconda3\\lib\\site-packages (from gym[atari]) (1.3.2)\n",
+      "Requirement already satisfied: requests>=2.0 in c:\\users\\cenar\\miniconda3\\lib\\site-packages (from gym[atari]) (2.18.4)\n",
+      "Requirement already satisfied: PyOpenGL; extra == \"atari\" in c:\\users\\cenar\\miniconda3\\lib\\site-packages (from gym[atari]) (3.1.0)\n",
+      "Requirement already satisfied: atari-py>=0.1.1; extra == \"atari\" in c:\\users\\cenar\\miniconda3\\lib\\site-packages (from gym[atari]) (0.1.1)\n",
+      "Requirement already satisfied: Pillow; extra == \"atari\" in c:\\users\\cenar\\miniconda3\\lib\\site-packages (from gym[atari]) (5.1.0)\n",
+      "Requirement already satisfied: future in c:\\users\\cenar\\miniconda3\\lib\\site-packages (from pyglet>=1.2.0->gym[atari]) (0.16.0)\n",
+      "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in c:\\users\\cenar\\miniconda3\\lib\\site-packages (from requests>=2.0->gym[atari]) (3.0.4)\n",
+      "Requirement already satisfied: idna<2.7,>=2.5 in c:\\users\\cenar\\miniconda3\\lib\\site-packages (from requests>=2.0->gym[atari]) (2.6)\n",
+      "Requirement already satisfied: urllib3<1.23,>=1.21.1 in c:\\users\\cenar\\miniconda3\\lib\\site-packages (from requests>=2.0->gym[atari]) (1.22)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\cenar\\miniconda3\\lib\\site-packages (from requests>=2.0->gym[atari]) (2018.1.18)\n"
      ]
     }
    ],
    "source": [
+    "import sys\n",
     "#Install\n",
-    "\n",
-    "%pip install gym[atari]"
+    "#De som bruker Windows må kjøre denne kommandoen først:\n",
+    "!{sys.executable} -m pip install pandas\n",
+    "!{sys.executable} -m pip install keras\n",
+    "!{sys.executable} -m pip install gym\n",
+    "!{sys.executable} -m pip install --no-index -f https://github.com/Kojoley/atari-py/releases atari_py\n",
+    "!{sys.executable} -m pip install gym[atari]"
    ]
   },
   {
