Jupyter notebook update

--- a/notebook/Open AI Reinforcment Sonic.ipynb
+++ b/notebook/Open AI Reinforcment Sonic.ipynb
@@ -189,7 +189,9 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import gym\n",
@@ -681,11 +683,45 @@
     "for t in range(5000):\n",
     "    # Render into buffer. \n",
     "    frames.append(env.render(mode = 'rgb_array'))\n",
+    "    #[]\n",
     "    action = env.action_space.sample()\n",
     "    observation, reward, done, info = env.step(action)\n",
     "    if done:\n",
     "        break\n",
     "display_frames_as_gif(frames)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "Qlearning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "q learning algoritm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "replay\n"
    ]
   },
   {
@@ -698,7 +734,9 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from PIL import Image\n",
@@ -1177,6 +1215,17 @@
    "outputs": [],
    "source": [
     "Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "replay_memory"
    ]
   },
   {
