--- a/notebook/Open AI Reinforcment Sonic.ipynb
+++ b/notebook/Open AI Reinforcment Sonic.ipynb
@@ -34,7 +34,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Contents\n",
     "* Reinforcement learning\n",
@@ -48,6 +52,51 @@
     "* Putting everything together: DQN\n",
     "* Training\n",
     "* Using trained network / Continue learning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Kilder\n",
+    "* Notebook med god beskrivelse av DQN: https://github.com/fg91/Deep-Q-Learning/blob/master/DQN.ipynb\n",
+    "* Artikkel som også forklarer implementasjon av DQN: https://becominghuman.ai/lets-build-an-atari-ai-part-1-dqn-df57e8ff3b26 og https://becominghuman.ai/beat-atari-with-deep-reinforcement-learning-part-2-dqn-improvements-d3563f665a2c\n",
+    "* DeepMind - Playing Atari with Deep Reinforcement Learning: https://arxiv.org/pdf/1312.5602.pdf"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Reinforcement Learning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Kort om Supervised learning\n",
+    "* Reinforcmenet learning og målet\n",
+    "* Terms\n",
+    "    + Agent\n",
+    "    + Action\n",
+    "    + Environment\n",
+    "    + State\n",
+    "    + Reward\n",
+    "    + Policy $\\pi$\n",
+    "* DQN"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Note that this algorithm is model-free: it solves the reinforcement learning task directly using samples\n",
+    "from the emulator $\\varepsilon$, without explicitly constructing an estimate of $\\varepsilon$. It is also off-policy: it\n",
+    "learns about the greedy strategy $a = max_a Q(s, a; θ)$, while following a behaviour distribution that\n",
+    "ensures adequate exploration of the state space. In practice, the behaviour distribution is often selected\n",
+    "by an $\\epsilon$-greedy strategy that follows the greedy strategy with probability 1 −  $\\epsilon$ and selects a\n",
+    "random action with probability $\\epsilon$."
    ]
   },
   {
@@ -1173,6 +1222,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Raw Cell Format",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
