--- a/notebook/Reinforcement Learning with OpenAI Gym.ipynb
+++ b/notebook/Reinforcement Learning with OpenAI Gym.ipynb
@@ -195,6 +195,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Pseudo algorithm\n",
     "<img src=\"resources/pseudo_alg.png\">"
    ]
   },
