Lagt til replay memory og replay experience

--- a/notebook/Reinforcement Learning with OpenAI Gym.ipynb
+++ b/notebook/Reinforcement Learning with OpenAI Gym.ipynb
@@ -207,7 +207,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Replay Memory"
+    "## Experience Replay & Replay Memory"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Vi benytter oss av en teknikk som kalles \"Experience Replay\" - hvor vi lagrer agentens experience for hvert steg i et datasett - nemlig \"Replay Memory\". \n",
+    "\n",
+    "Agentens fullstendige \"experience\" for steg t, kan summeres som:\n",
+    "<img src=\"resources/experience.PNG\">\n",
+    "\n",
+    "Normalt setter man en limit for replay memory til N, og kan derfor kun lagre de siste N experiencene. Replay memory brukes til å tilfeldig sample, for å trene nettverket. Og det er hele denne prosessen, hvor vi oppnår erfaring og så sampler fra replay memory som faktisk er experience replay.\n",
+    "\n",
+    "Men hvorfor ikke bare gi nettverket sekvenser fra replay memory?\n",
+    "\n",
+    "Grunnen til at vi sampler tilfeldig fra replay memory er for å komme bort fra korrelasjonen mellom påfølgende sekvenser - og det er slik vi klarer å oppnå læring over tid.\n"
    ]
   },
   {
